<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggg"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38.3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="#333232"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|bottom"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="7.3dp"
                    android:background="@drawable/small_cicle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/half_circle"
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:background="@drawable/half_circle" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            android:paddingStart="14.5dp"
            tools:ignore="RtlSymmetry">

            <View
                android:layout_width="5.6dp"
                android:layout_height="225dp"
                android:background="#FF5CCB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="35.6dp"
                android:background="@drawable/rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="19dp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20.3dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center_horizontal"
                        android:text="@string/welcome_back"
                        android:textColor="#333232"
                        android:textSize="16.7sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22.3dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/email"
                        android:textColor="#9e9d9d"
                        android:textSize="12.3sp" />

                    <EditText
                        android:id="@+id/email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:maxLines="1"
                        android:paddingTop="5dp"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#9e9e9e" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/password"
                        android:textColor="#9e9d9d"
                        android:textSize="12.3sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="5dp">

                        <EditText
                            android:id="@+id/pw_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="#333232"
                            android:textSize="15sp"
                            android:importantForAutofill="no"
                            tools:ignore="LabelFor" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="35dp"
                        android:background="#9e9e9e" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="90dp"
            android:layout_height="41dp"
            android:layout_gravity="right"
            android:layout_marginTop="40.3dp"
            android:layout_marginBottom="16.7dp"
            android:background="@drawable/half_blue_roundshape"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/login"
                android:onClick="signIn"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21.6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="85.6dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#d2d2d2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/another_way"
                android:textColor="#aeaeae"
                android:textSize="13.3sp" />

            <View
                android:layout_width="85.6dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#d2d2d2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26.6dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/fb"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/instagram"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/twitter"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="26.7dp"
                android:layout_height="26.7dp"
                android:src="@drawable/linkedin"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/does_n_have_any_accout"
                android:textColor="#333232"
                android:textSize="13.3sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_here"
                android:onClick="signUp"
                android:textColor="#38b5f2"
                android:textSize="13.3sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>